--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,1 +1,33 @@
-django==4.2.7 djangorestframework==3.14.0 psycopg2-binary==2.9.6 python-decouple==3.8 djangorestframework-simplejwt==5.
+Django==5.2.5
+djangorestframework==3.16.1
+django-cors-headers==4.7.0
+djangorestframework-simplejwt==5.5.1
+openai==1.102.0
+Pillow==11.3.0
+PyJWT==2.10.1
+requests==2.32.5
+python-dotenv==1.1.1
+pypdf==6.0.0
+PyPDF2==3.0.1
+pytesseract==0.3.13
+tqdm==4.67.1
+httpx==0.28.1
+httpcore==1.0.9
+h11==0.16.0
+certifi==2025.8.3
+charset-normalizer==3.4.3
+idna==3.10
+urllib3==2.5.0
+anyio==4.10.0
+sniffio==1.3.1
+distro==1.9.0
+pydantic==2.11.7
+pydantic-core==2.33.2
+annotated-types==0.7.0
+typing-extensions==4.15.0
+sqlparse==0.5.3
+asgiref==3.9.1
+deepseek==1.0.0
+typing-inspection==0.4.1
+packaging==25.0
+jiter==0.10.0
